--- a/sites/all/themes/pfo/sass/_front.scss
+++ b/sites/all/themes/pfo/sass/_front.scss
@@ -2,8 +2,7 @@
 
 .front header {
   width: 100%;
-  background: no-repeat 50% top;
-  background-size: cover;
+  background: image-url('bg-noise.png') 50% top;
 }
 
 .front nav li.first {
